navbar spacing works correctly

--- a/skeleton/css/01-header.css
+++ b/skeleton/css/01-header.css
@@ -13,8 +13,10 @@ body {
   height: 40px;
 }
 
+.header h1 { font-size: 16px; }
+
 .header-nav {
-  width: 80%;
+  width: 900px;
   border-left: 1px solid white;
   border-right: 1px solid white;
   margin: 0 auto;
@@ -30,7 +32,7 @@ body {
 .header-list {
   float: right;
   display: inline-block;
-  font-size: 17px;
+  font-size: 16px;
 }
 
 .header-list li {
